force-app/main/default/objects/Account/fields/test2__c.field-meta.xml
<CustomField>
    <fullName>test2__c</fullName>
    <label>test2</label>
    <length>12</length>
    <type>Text</type>
</CustomField>