force-app/main/default/objects/Account/fields/testfield__c.field-meta.xml
<CustomField>
    <fullName>testfield__c</fullName>
    <formula>testcheckbox__c = true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>testfield</label>
    <type>Checkbox</type>
</CustomField>